# fastalgebra

./: .gitignore  README.md  pyproject.toml  test.py
fastalgebra/: a.out  expr.c  expr.h  exprmodule.c  ll.h  stack.c  stack.h
